--- a/.github/workflows/build-compiler-master.yml
+++ b/.github/workflows/build-compiler-master.yml
@@ -21,6 +21,7 @@ jobs:
           registry: docker.tarsyun.com
           username: ${{ secrets.name }}
           password: ${{ secrets.pass }}
+          token: ${{ secrets.MY_TOKEN }}
       - uses: actions/checkout@v2
         with:
           submodules: true
