--- a/.github/workflows/build-docker-tag.yml
+++ b/.github/workflows/build-docker-tag.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+          token: ${{ secrets.MY_TOKEN }}
       - name: Get version
         id: get_version
         run: echo "::set-output name=VERSION::${GITHUB_REF#refs/tags/}"
