--- a/config-3.conf
+++ b/config-3.conf
@@ -21,6 +21,7 @@
       coroutinememsize=1G
       coroutinestack=128K
       logLevel=DEBUG
+      closecout=0
       <Base.StorageServer.RaftObjAdapter>
         allow
         endpoint=tcp -h 127.0.0.1 -p 10103 -t 60000
