--- a/.github/workflows/build-docker-tag.yml
+++ b/.github/workflows/build-docker-tag.yml
@@ -3,8 +3,8 @@ name: build-base-compiler-master
 on:
   push:
     tags:
-      - v* 
-      
+      - v*
+
 jobs:
   build:
     container: tarscloud/base-compiler
@@ -25,15 +25,14 @@ jobs:
           registry: docker.tarsyun.com
           username: ${{ secrets.name }}
           password: ${{ secrets.pass }}
-      - name: Cache build modules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-build-modules
-        with:
-          path: build
-          key: ${{ runner.os }}-build-${{ env.cache-name }}
-      - name: make
-        run: mkdir -p build && cd build && cmake .. && make -j8
-      - name: build docker
+      - name: Create Build
         run: |
-          exec-build-cloud.sh tarscloud/tars.cppbase cpp build/bin/StorageServer yaml/values.yaml ${{ steps.get_version.outputs.VERSION }}  true
+          docker run --rm --privileged tonistiigi/binfmt:latest --install all
+          docker buildx create --name k8s-framework-builder --use
+          docker buildx inspect --bootstrap --builder k8s-framework-builder
+      - name: Buildx
+        run: |
+          docker run -v `pwd`:/data --entrypoint "" tarscloud/base-deploy sh -c "cd /data && /usr/bin/create-buildx-dockerfile.sh cpp yaml/values.yaml ${{ steps.get_version.outputs.VERSION }} Dockerfile"
+      - name: Create Docker
+        run: |
+          ./docker-buildx-cloud.sh
