--- a/yaml/values.yaml
+++ b/yaml/values.yaml
@@ -18,14 +18,15 @@ cloud:
   readme_cn: README.md
   protocols:
     - tars/Storage.tars
-  assets: 
+  assets:
     - assets
   open_source: false
   independent: true
-app: Base 
+  container: tars.cppbase
+app: Base
 server: StorageServer
 template: tars.cpp
-profile: ''
+profile: ""
 servants:
   - name: RaftObj
     port: 10000
