- use -static-gcc -static-libstdc++

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,4 +5,5 @@ gen_server(Base StorageServer tars)
 
 add_dependencies(StorageServer raft)
 
-target_link_libraries(StorageServer storage raft rocksdb snappy)
+target_link_libraries(StorageServer storage raft rocksdb snappy -static-gcc -static-libstdc++
+)
